--- a/_posts/2019-03-20-blog-post-8.md
+++ b/_posts/2019-03-20-blog-post-8.md
@@ -12,43 +12,29 @@ tags:
   - gym
 ---
 
-This winter, I split my time between Hassanpour Lab and AI research at Protago Labs.
+This winter, I split my time between Hassanpour Lab and AI research at Protago Labs. Living at home and being with family was a big source of joy. 
 
 ## Me and My Research
 
 The majority of my time this term was spent at home remotely working on research with my advisor Saeed Hassanpour, which is always a pleasure.
 
-Recently, three papers were published:
+Three papers were published:
 
-**Pathologist-level Classification of Histologic Patterns on Resected Lung Cancer Slides with Deep Neural Networks**  
-**Jason Wei**, Laura Tafe, Yevgeniy Linnik, Louis Vaickus, Naofumi Tomita, Saeed Hassanpour  
-*Nature Scientific Reports 2019*   
-<a href="https://www.nature.com/articles/s41598-019-40041-7" style="color:navy" target="_blank">[paper]</a> 
-<a href="https://medium.com/health-data-science/classification-of-histopathology-images-with-deep-learning-a-practical-guide-2e3ffd6d59c5" style="color:navy" target="_blank">[blog post]</a>
-<a href="https://github.com/BMIRDS/deepslide" style="color:navy" target="_blank">[Github]</a> 
-<img height="16" src="https://img.shields.io/github/stars/BMIRDS/deepslide.svg?logo=github&logoColor=white&colorA=navy&link=https://github.com/BMIRDS/deepslide&link=https://github.com/BMIRDS/deepslide">
+* **Pathologist-level Classification of Histologic Patterns on Resected Lung Adenocracinoma Slides with Deep Neural Networks** in *Scientific Reports*
+* **Automated Detection of Celiac Disease on Duodenal Biopsy Slides: A Deep Learning Approach** in *Journal of Pathology Informatics*
+* **Automating the Paris System for Urine Cytopathology: A Hybrid Deep Learning and Morphometric Approach** in *Cancer Cytopathology*
 
-**Automated Detection of Celiac Disease on Duodenal Biopsy Slides: A Deep Learning Approach**  
-**Jason Wei**, Jerry Wei, Christopher Jackson, Bing Ren, Arief Suriawinata, Saeed Hassanpour  
-*Journal of Pathology Informatics 2019*   
-<a href="http://www.jpathinformatics.org/article.asp?issn=2153-3539;year=2019;volume=10;issue=1;spage=7;epage=7;aulast=Wei" style="color:navy" target="_blank">[paper]</a>
-
-**Automating the Paris System for Urine Cytopathology: A Hybrid Deep Learning and Morphometric Approach**  
-Louis Vaickus, Arief Suriawinata, **Jason Wei**, Xiaoying Liu  
-*Cancer Cytopathology 2019*  
-<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cncy.22099" style="color:navy" target="_blank">[paper]</a>
-
-I'm most proud of the lung cancer paper, which actually got a lot of media attention (96 tweets and covered by 26 news outlets as of March 20, 2019).
+I'm very proud of the lung cancer paper, which actually got a lot of media attention (96 tweets and covered by 26 news outlets as of March 20, 2019).
 
 **Open-Source Code**. One cool thing that happened was that I posted my code for histopathology image classification called *DeepSlide* publicly on [Github](https://github.com/BMIRDS/deepslide), and it was [retweeted](https://twitter.com/saeedhp) by PyTorch! It was nice to finally get stars on the Github repo, and a bunch of randos have been emailing me with questions about our paper.
 
 **What makes a good scientist?** This term, I've been thinking a lot about what defines a good scientist. A metric such as "number of publications" is probably naive since publishing a lot of mediocre papers in low-tier journals is not considered significant in my opinion. A often-used metric is number of citations, which I think is pretty good, but the lag factor of this makes it almost useless for immediate feedback. Perhaps a good metric is "number of papers in top-tier publications", where I define top-tier publications as the following:
 
 * Nature Medicine or similar for AI in medicine
-* MICCAI for machine learning in healthcare
-* CVPR or similar for computer vision
+* MICCAI for medical image analysis
+* CVPR or similar for vision
 * ACL or similar for NLP
-* NIPS or similar for machine learning
+* NIPS or similar for ML
 
 Unfortunately, I'm not even on the scoreboard based on this metric, so it looks like I have some work to do. Also, doing mediocre projects just for the sake of publishing another paper is considered a blatant waste of time by this metric. I'm not a very experienced researcher by any means, so I think this will change over time. But these are my thoughts for now.  
 
@@ -56,23 +42,25 @@ Unfortunately, I'm not even on the scoreboard based on this metric, so it looks 
 
 **Data augmentation in NLP**. I worked part-time remotely with the research group at Protago Labs, an artificial intelligence startup in Tysons Corner, VA. Because of my experience working with small datasets, I was interested in data augmentation techniques in natural language processing (NLP), a topic lacking good literature in the field. I developed a simple set of techniques called *EDA* for Easy Data Augmentation, and wrote a [paper](https://arxiv.org/abs/1901.11196) demonstrating this on various datasets. 
 
-**Blogging.** I wrote a [blog post](https://towardsdatascience.com/these-are-the-easiest-data-augmentation-techniques-in-natural-language-processing-you-can-think-of-88e393fd610) about EDA on Medium, which was the first academic blog post I've written. I was surprised to see that it was chosen by Medium curators to be distributed to readers following the "Machine Learning" and "Data Science" tags, and my post got 500+ views and 250+ reads in one week! It was encouraging to see people reading about my work and emailing me with questions. My AI for lung cancer paper was also "curated" but did not get many views. 
+**Blogging.** I wrote a [blog post](https://towardsdatascience.com/these-are-the-easiest-data-augmentation-techniques-in-natural-language-processing-you-can-think-of-88e393fd610) about EDA on Medium, which was the first academic blog post I've written. I was surprised to see that it was chosen by Medium curators to be distributed to readers following the "Machine Learning" and "Data Science" tags, and my post got 500+ views and 250+ reads in one week! It was encouraging to see people reading about my work and emailing me with questions. My blog post on the lung cancer classification paper was also curated but did not get very many views. 
 
 ## Living at Home
 
-I enjoyed living at home with my mom and brother. We ate dinner together every day, which was nice and really important to me. My mom has been working a lot recently, but still has time to hang out with her friends and cook for me and my brother. My brother is doing well at school, and we went to the gym together every day, which was good bonding time. Every time I visit home I'm always impressed with how much by brother matures. 
+I enjoyed living at home with my mom and brother. We ate dinner together every day, which was nice and really important to me. My mom has been working a lot recently, but still has time to hang out with her friends and cook for me and my brother. My brother is doing well at school, and we went to the gym together every day, which was good bonding time. Every time I visit home I'm always impressed with how much by brother matures. He won a grand prize at the regional science fair, which means he's a finalist in the international science and engineering fair! I am so proud of him.
 
-Having a big room, big bed, and private bathroom is a luxury. I took baths occasionally, which helped my body relax and clear my mind. Baths are also a good place to read and think (the water maintains its temperature for more than an hour if you start off really hot and close the shower curtain.)
+Having a big room, big bed, and private bathroom is a luxury. I took baths occasionally, which helped relax my body and clear my mind. Baths are a good place to read and think (the water maintains its temperature for more than an hour if you start off really hot and close the shower curtain.)
+
+Seeing my high-school friends over break was fun. I often went to the gym with Jeffrey, Jerry, and Danny; played poker with Devin, Jerry, and Jeffrey; and played pool with Jerry and William. I invited Allen, Shirley, and John over for a bigger poker night which was also fun.
 
 ## Working Out
 
 I was never really into lifting weights but I did a bit in Denmark and liked it so I got a gym membership with my brother. This term was mostly focused on building mass and improving my bench press. 
 
-**Workout plan.** I hurt my right knee mid-December from squating, so I only did upper body workouts. I did a five day cycle: push on days 1 and 3, pull on days 2 and 4, and rest on day 5. Every day 1 I would test my 5x5 bench, my main metric for improvement, and on days 3 and 4 I would do particularly hard workouts. On the bench press, towards the end of the term I had a pretty bad muscle imbalance where at heavy weights, my left arm couldn't keep up and my body ended up turning to compensate, which completely threw off my form.
+**Workout plan.** I hurt my right knee mid-December from squating, so I only did upper body workouts. I did a five day cycle: push on days 1 and 3, pull on days 2 and 4, and rest on day 5. Every day 1 I would test my 5x5 bench, my main metric for improvement, and on days 3 and 4 I would do particularly hard workouts. On the bench press, towards the end of the term I had a pretty bad muscle imbalance where at heavy weights, my left arm couldn't keep up and my body ended up turning to compensate, which completely threw off my form. I also injured my butt and left arm after climbing, and I made almost no progress in the last three weeks. 
 
 **Nutrition plan.** I ate three meals a day: lunch and two dinners. This was often 1.5 cups of rice with meat and vegetables. Each day, I took 3 scoops of whey protein, 5g of creatine, 2 fish oil tablets, and occasionally a caffeine pill and BCAA.
 
-**Improvement.** My 5-cycle plan worked out very well in the beginning; I improved from 125 to 140 in just 15 days. However, it got much slower after that, taking me 17 days to improve to 145, maybe because I was overworking my CNS. 
+**Improvement.** My 5-cycle plan worked out very well in the beginning; I improved from 125 to 140 in just 15 days. However, it got much slower after that, taking me 17 days to improve to 145, maybe because I was overworking my CNS and had minor injuries. Moving forward, I should focus on doing a good warm-up, improving mobility, and balancing my workout with more lower body exercises.
 
 **How do I feel about this?** I enjoyed working out more than I expected, which indicates that I should probably be more open-minded about trying out new things. 
 
@@ -80,7 +68,9 @@ I was never really into lifting weights but I did a bit in Denmark and liked it 
 
 Since I had more leisure time this term than usual, I did some reading. Books have years of work and decades of experiences that I'm able to absorb in tens of hours. I find that extremely empowering.
 
-***The Subtle Art of Not Giving a F\*ck.*** I bought this book because of its incredible reviews on Amazon. Manson is a potty mouth but brings up insightful ideas on self-improvement and tells things like it is. Most good books have one or maybe two or three takeaways, but this book has like, dozens. I realize that this book may not be very helpful for established adults with a lot of life experience, but as a 20-year-old reading it, I consider many of his ideas profound. I would recommend it to anyone younger than 30 years old. These are his biggest ideas:
+### The Subtle Art of Not Giving a F\*ck
+
+I bought this book because of its incredible reviews on Amazon. Manson is a potty mouth but brings up insightful ideas on self-improvement and tells things like it is. Most good books have one or maybe two or three takeaways, but this book has like, dozens. I realize that this book may not be very helpful for established adults with a lot of life experience, but as a 20-year-old reading it, I consider many of his ideas profound. I would recommend it to anyone younger than 30 years old. These are his biggest ideas:
 
 1. **"Not giving a fork."** means not caring about unimportant things. Reserve your ducks for what truly matters. If you are constantly bothered by trivial things, find something more important to give a firetruck about. What matters to me? Family, friends, health, research, the future of humanity, stuff like that. Not the guy who cut me off on the highway or the rude cashier at the grocery store.
 2. **Problems.** They never end, just merely get exchanged or upgraded. Solving them brings happiness. Think of happiness as a constant work-in-progress, since problems never end and you will have to keep solving them. What problems do you want to struggle for? Don't ask yourself what you enjoy. Ask yourself, what pain are you willing to sustain?
@@ -99,7 +89,9 @@ Other ideas that I liked:
 - **Love.** Unhealthy love is two people trying to escape their problems through their emotions for each other. Healthy love is two people acknowledging and addressing their own problems with each other's support.
 - **Death.** Manson cites Ernest Becker's *The Denial of Death*, which argues that because people fear death, they aim to create a conceptual self that will live forever, an *immortality project*. This can be in the form of names on buildings, statues, careers, children, etc. These immortality projects often lead to entitlement and are a problem. Comfortable with and acceptance of the inevitability of our own death allows us to choose our values more freely. The only way to be comfortable with death is to see yourself as part of something bigger and more unknowable than yourself. "A man who lives fully is prepared to die at any time."
 
-***Deep Work.*** I was motivated to read this book after my advisor shared this [post](https://www.chronicle.com/interactives/is-email-making-professors-stupid) with me. Cal Newport defines "deep work" as concentrated work that pushes cognitive abilities to their limit, an idea I really connected with. I realized that I haven't actually done this much; I was better at achieving this actually my junior year of high school, when I would frequent the library to get distraction-free studying done since I had to shove a high density of information into my brain for all my classes and projects. A couple of points that I really liked:
+### Deep Work
+
+I was motivated to read this book after my advisor shared this [post](https://www.chronicle.com/interactives/is-email-making-professors-stupid) with me. Cal Newport defines "deep work" as concentrated work that pushes cognitive abilities to their limit, an idea I really connected with. I realized that I haven't actually done this much; I was better at achieving this actually my junior year of high school, when I would frequent the library to get distraction-free studying done since I had to shove a high density of information into my brain for all my classes and projects. A couple of points that I really liked:
 
 1. **Working in batches.** Adam Grant (a Wharton professor) was prolific because he batched hard work into long, uninterrupted stretches (e.g., one semester just teaching, one just research).
 2. **Flow.** Deep work often involves a flow state, which generates happiness (busy work doesn't).
@@ -113,7 +105,9 @@ Other ideas that I liked:
 10. **Fixed schedule productivity.** Impose some arbitrary time constraint. While this seems counterproductive, you'll actually adapt to be able to work in these limits.
 11. **Email responses.** Do not reply to an email or message if (1) you don't care or (2) nothing really good would happen if you did respond and nothing really bad would happen if you did not.
 
-***Digital Minimalism.*** I read Cal Newport's newest book since I liked his previous one so much and I had always been interested in how social media affects the next generation. I feel that he is onto something important in this book, since the detrimental effects of social media and smartphones have also been brought up by Mark Manson and Simon Sinek. He first argues why being too connected is bad ("checking your likes is the new smoking", which I agreed with before reading the book. 
+### Digital Minimalism
+
+I read Cal Newport's newest book since I liked his previous one so much and I had always been interested in how social media affects the next generation. I feel that he is onto something important in this book, since the detrimental effects of social media and smartphones have also been brought up by Mark Manson and Simon Sinek. He first argues why being too connected is bad ("checking your likes is the new smoking", which I agreed with before reading the book. 
 
 Several good ideas from his book:
 
@@ -132,11 +126,15 @@ I feel like I might have a hard time doing this while in college, since I need t
 * Only keep apps that are essential on my phone: no email, google docs, BofA, messenger, instagram.
 * Reclaim leisure: hopefully I can find a new hobby.
 
-***Surely You're Joking, Mr. Feynman!*** My friend June recommended that I read this book about the funny stories that Feynman had throughout his life, and I finally got to it. It was an enjoyable read, and while I expected it to be life lessons that led him to become a great physicist, Feynman was actually very humble and talked about accidentally brilliant comments he made, picking up women, and overall trolling. Bill Gates found Feynman to be a great teacher, and I hope to watch [his lecture series](https://www.gatesnotes.com/Education/The-Best-Teacher-I-Never-Had) when I get some free time. I found his experiences with hallucinations in sensory deprivation tanks to be interesting, and I hope to try it one day. A piece of advice that Sam Greydanus gave me a while ago is a quote from Feynman:
+### Surely You're Joking, Mr. Feynman!
+
+My friend June recommended that I read this book about the funny stories that Feynman had throughout his life, and I finally got to it. It was an enjoyable read, and while I expected it to be life lessons that led him to become a great physicist, Feynman was actually very humble and talked about accidentally brilliant comments he made, picking up women, and overall trolling. Bill Gates found Feynman to be a great teacher, and I hope to watch [his lecture series](https://www.gatesnotes.com/Education/The-Best-Teacher-I-Never-Had) when I get some free time. I found his experiences with hallucinations in sensory deprivation tanks to be interesting, and I hope to try it one day. A piece of advice that Sam Greydanus gave me a while ago is a quote from Feynman:
 
 *Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.*
 
-***The Life-Changing Magic of Tidying Up.*** When I was packing for Denmark last fall, I thought hard about what possessions I need and were important to me, so I was interested in this book. Marie Kondo's proposed Kon-Mari technique involves discarding all posessions that do not spark joy, and then organizing by item category. She says that surrounding yourself with only things that bring you joy not only puts your house in order, but also brings clarity to your life. The elegance of and reasoning behind her approach substantiates the idea that a simple approach based on first principles thinking is often the best. After reading, I went to my old room in the basement and discarded more than half of my belongings.
+### The Life-Changing Magic of Tidying Up
+
+When I was packing for Denmark last fall, I thought hard about what possessions I need and were important to me, so I was interested in this book. Marie Kondo's proposed Kon-Mari technique involves discarding all posessions that do not spark joy, and then organizing by item category. She says that surrounding yourself with only things that bring you joy not only puts your house in order, but also brings clarity to your life. The elegance of and reasoning behind her approach substantiates the idea that a simple approach based on first principles thinking is often the best. After reading, I went to my old room in the basement and discarded more than half of my belongings.
 
 ## Other Thoughts
 
@@ -150,7 +148,7 @@ For instance, in tenth grade, I was sucking-up to my history teacher because I h
 
 ## Visiting Dartmouth
 
-I made the journey up to Dartmouth the first week of school to see friends from Tri-Kap and Tabard, and my senior friends. It's always exciting to be at school and I missed everyone during my term abroad.
+I made the journey up to Dartmouth the first week of school to see friends from Tri-Kap and Tabard, and my senior friends. It's always exciting to be at school and I missed everyone during my term abroad. I especially enjoyed dinner at Pine with Yifei and Billy, and poker with my friend Jerry and his crew.
 
 ## Who are your heroes?
 I guess a new thing that I thought was pretty cool from Molly's Game is that her dad would ask her the same questions every year on her birthday, and track how her answers changed over time. One of those questions was "who are your heroes?"
@@ -164,40 +162,40 @@ I guess a new thing that I thought was pretty cool from Molly's Game is that her
 ## Songs
 Some songs that I've been listening to for a while now get me caught up in the feels because I've attached them to specific memories or places. I think it would be cool to listen to these 10 years from now and see if they still resonate:
 
-Winter 2018:
+**Winter 2018**
 * [Trance](https://www.youtube.com/watch?v=ucV93PTtieM) by MrOtterMusic: grinding out the EDA paper
 
-Fall 2018:
+**Fall 2018**
 * Backbeat by Dagny, Saturday Sun by Vance Joy: 5am runs and working out at the jungle gym at Kokkedal 
 * Portions for Foxes by Rilo Kiley; Effortless by Sabina Ddumba; Hey Look Ma I Made It by Panic at the Disco: biking to DTU
 * Stronger by Clean Bandit: working out at the DTU gym
 * [Paradise Mix](https://www.youtube.com/watch?v=TcEFQDdPz0g&t=402s) by MrOtterMusic: Waiting for the bus at DTU
 * [Moments](https://www.youtube.com/watch?v=A9yqbqUB__w) by MrOtterMusic: grinding out research paper submissions at the DTU library
 
-Summer 2018:
+**Summer 2018**
 * Everybody by Ingrid Michaelson: doing work in the pool room at Tabard
 
-Spring 2018: 
+**Spring 2018**
 * Sunset Jesus, Dear Boy, Broken Arrows by Avicii: living off-campus in Vermont
 * Paradise by George Ezra: driving to work at Oracle in my old Camry on a nice spring day with the windows down
 
-Winter 2018:
+**Winter 2018**
 * Anywhere by Rita Ora: doing work on the kitchen table at CLH 
 * Snow by Red Hot Chilli Peppers: pong at Tabard on the last day of the term
 
-Fall 2017:
+**Fall 2017**
 * Something Just Like This by Chainsmokers: pong at Chi-Gam with June
 
-Summer 2017:
+**Summer 2017**
 * Shine, Golden Year by Lolo
 
-Spring 2017:
+**Spring 2017**
 * Sweet Dreams (Radio Killer Remix) by Andra & Mara: hanging out in Butterfield
 
-Winter 2017:
+**Winter 2017**
 * Rise Up by Andra Day: rethinking life on a bench on the green after failing an Econ 22 Exam
 
-High School:
+**High School**
 * Me, Myself & I by G-Eazy: the concert
 * Sugar by Robin Schulz: driving to Skyline Caverns on a beautiful day in a ML350
 * I Will Return by Skylar Grey: senior homecoming drive home in ES350
