--- a/_posts/2018-12-10-blog-post-7.md
+++ b/_posts/2018-12-10-blog-post-7.md
@@ -166,7 +166,7 @@ Reading
 
 Closing
 ------
-Being so far from my previous life helped me reflect on it from a new perspective. Writing this on my last day here, I am swept by a wave of emotion that I would be living this life that I had finally gotten used to and really enjoyed, and going back to my old one. I had been adamant about doing a study abroad program since freshman year because so many alumni told me that studying abroad was the highlight and those who didn't said that they regretted it. I would really recommend studying abroad to anyone who has the chance to. 
+Being so far from my previous life helped me reflect on it from a new perspective. Writing this on my last day here, I am swept by a wave of emotion that I would be leaving this life that I had finally gotten used to and really enjoyed, and going back to my old one. I had been adamant about doing a study abroad program since freshman year because so many alumni told me that studying abroad was the highlight and those who didn't said that they regretted it. I would really recommend studying abroad to anyone who has the chance to. 
 
 Merry christmas from Vilnius!
 
