--- a/_drafts/2019-06-01-blog-post-9.md
+++ b/_drafts/2019-06-01-blog-post-9.md
@@ -1,5 +1,5 @@
 ---
-title: 'Gidday Mate'
+title: 'Spring 2019: The Grind Returns'
 date: 2019-06-01
 permalink: /posts/2019/6/blog-post-9/
 tags:
@@ -10,16 +10,50 @@ tags:
 
 Classes
 ------
-**Technical Writing in Computer Science (COSC 94).**
+**Technical Writing in Computer Science (COSC 94).** 
+Tom Cormen, author of *Introduction to Algorithms* (the second most cited work in computer science), teaches this course and will be retiring next year, so of course I had to take it. He is pedantic and detail oriented, and goes over all these rules of writing that I never would have known but are really helpful. 
 
-**Algorithms (COSC 31).** 
+**Algorithms (COSC 31).** We covered some big topics including divide and conquer, dynamic programming, randomized algorithms, graph searches. It was a lot of work but good practice for future coding interviews, I suppose.
 
 **What's in your Shoebox? Unpacking your study abroad experience (COCO 21).**
+
+
+ICLR
+------
+
+I submitted my research paper with Protago Labs to an ICLR workshop in New Orleans, and it was accepted! And so I went to my first machine learning conference. It was a truly incredible experience; even at the Boston Logan airport terminal to New Orleans, I had never been with such a high density of people doing machine learning.
+
+The first day was workshop day, and my paper was chosen as one of eleven spotlights in the morning section, so I presented a one-minute overview of my research to a room of 200+ people! I was nervous but I think it went okay. During the actual poster session shortly after, I had good conversaions with people. A couple told me they had previously read my medium post online and tried my github repo, which was nice to hear. Later in the day, I went around to the company booths and asked about AI residency programs. Google, Uber, and Facebook all have them, with applications opening in the Fall. All recruiters told me that they still do SWE coding interviews as part of the application, so I guess no more excuses to avoid grinding out hacker rank problems (sad). In the afternoon, I went to presentations in the main hall, where I was intrigued by meta-learning, graph neural networks, and pruning. To end the day, I had a nice dinner with some ML for healthcare enthusiasts I met on Whova. 
+
+The second day, I attended Ian Goodfellow's invited talk on adversarial machine learning, which I enjoyed, and a Google Lunch panel on music generation. I sat by the riverfront for a bit, got dinner with some other undergrads at the conference, and did some Algorithms homework to end the night.
+
+On the third day, I went to the invited talk and the ICLR debate, which were both pretty average. The main events were the Salesforce and Facebook parties that night. I first went to the Salesforce party at The House of Blues, where I met a DTU student Chris and had a pretty good time. Towards the end, I left to check out the Facebook party at the Grand Oaks Mansion. It was the goddamn Great Gatsby. Open bars, free food, definitely the nicest party venue I've ever been to. These companies are bloody rich.
+
+insert pics
+<!-- <img src='/images/dtu/nyhavn.jpg' width="32%">
+<img src='/images/dtu/buddy.jpg' width="32%">
+<img src='/images/dtu/hagia.jpg' width="32%"> -->
+
+Montreal 
+------
+I had a good time spending the weekend at Montreal from April 26-28 with the Tri-Kap brotherhood. We drove up Friday afternoon and arrived at night, with enough time to go to a dispensery before getting Indian food for dinner and hitting up Winnie's bar and restaurant for some drinks and dancing. Although it was raining the whole night, we ended strong with some 2:00AM poutine at Dunn's for the dirty bulk.
+
+On saturday, we feasted at a k-BBQ place for lunch before going back to the airbnb for Avalon and nap time. For dinner, we ate at the brewery *Les 3 Brasseurs* where I had a pretty sick Chicken and Waffles burger and our table of six cleaned up 6L of beer. Then, I gambled with two '19s, Dan and Brian, at the Casino de Montreal, where I lost 140 Canadian dollars at the poker table by going all-in with AQ when I clearly should have just folded. We ended the night with drinks and wholesome bonding at *Grumpy's*.
+
+On sunday, we woke up butt-early at 9:40AM to miraculously clean up the room before the 10:00AM check-out time. We ate a nice brunch at *Cacao 70* and drove home.
+
+Fitness
+------
+I set lofty goals for myself in terms of working out
+Set back by being sick twice
+Hard to eat enough at school
+
+
 
 Reading
 ------
 
-**The Year of Living Danishly.** I bought this book because I was interested in comparing my experience in Denmark with someone else's. Helen Russell tells her story of living in rural Jutland for a year while her husband works at Lego. Throughout the book, she tries to figure out why Danes are so happy. Some of the reasons:
+**The Year of Living Danishly.** I bought this book because I wanted to compare my experience in Denmark with someone else's. Helen Russell tells her story of living in rural Jutland for a year while her husband works at Lego. Throughout the book, she tries to figure out why Danes are so happy. Some of the reasons she found:
 
 * Hygge: feeling of coziness at home with family (especially during the Winter)
 * Trusting the system
@@ -34,6 +68,12 @@ Reading
 * People respect your profession
 
 Reading the book made me nostalgic about my time in Denmark, and I think it would be really helpful to bring "the Danish vibe" to the US. 
+
+Who are my heroes?
+------
+
+* [Patrick Shyu](https://www.youtube.com/watch?v=XA3Qjnhvdvs) gives great life advice for young people who want to get into tech.
+
 
 Closing
 ------
