--- a/_drafts/2019-06-01-blog-post-9.md
+++ b/_drafts/2019-06-01-blog-post-9.md
@@ -45,10 +45,12 @@ On sunday, we woke up butt-early at 9:40AM to miraculously clean up the room bef
 Fitness
 ------
 I set lofty goals for myself in terms of working out
-Set back by being sick twice
+Set back by being sick twice and conference
 Hard to eat enough at school
 
-
+Green Key Weekend
+------
+I had a good time hanging out at Tri-Kap for green key weekend. We have a barbeque, I went to Brewhaha at O-Farm, playing poker with Kevin Yang and Jerry Wang and friends, and played poker at Lebanon Poker Room (on the third hand, I went all in with Kings and got called by Q-10 Suited, and he sucked out on me). 
 
 Reading
 ------
