add new blog post

--- a/_drafts/2019-06-01-blog-post-9.md
+++ b/_drafts/2019-06-01-blog-post-9.md
@@ -7,16 +7,18 @@ tags:
   - machine learning
 ---
 
+I had a good time this spring, although I didn't achieve many of the goals that I had set for myself. 
 
 Classes
 ------
 **Technical Writing in Computer Science (COSC 94).** 
 Tom Cormen, author of *Introduction to Algorithms* (the second most cited work in computer science), teaches this course and will be retiring next year, so of course I had to take it. He is pedantic and detail oriented, and goes over all these rules of writing that I never would have known but are really helpful. 
 
-**Algorithms (COSC 31).** We covered some big topics including divide and conquer, dynamic programming, randomized algorithms, graph searches. It was a lot of work but good practice for future coding interviews, I suppose.
+**Algorithms (COSC 31).** We covered big topics including divide and conquer, dynamic programming, randomized algorithms, graph searches. It was a lot of work but good practice for future coding interviews, I suppose. For the algorithms class I took in Denmark, the dynamic programming questions would often be "circle the right recurrence", whereas here, it would be "write your own recurrence and prove it."
 
-**What's in your Shoebox? Unpacking your study abroad experience (COCO 21).**
+**What's in your Shoebox? Unpacking your study abroad experience (COCO 21).** This class was focused on reflecting on my Denmark study abroad experience, and at the same time it filled two of my distributive requirements. We had some engaging journal prompts and made a final project video, and it was overall a relaxed and good class for making the most out of my study abroad experience.
 
+**Misc**. I was initiated into Tau Beta Pi, the engineering honor society. I received the Barry Goldwater Scholarship. 
 
 ICLR
 ------
@@ -25,14 +27,14 @@ I submitted my research paper with Protago Labs to an ICLR workshop in New Orlea
 
 The first day was workshop day, and my paper was chosen as one of eleven spotlights in the morning section, so I presented a one-minute overview of my research to a room of 200+ people! I was nervous but I think it went okay. During the actual poster session shortly after, I had good conversaions with people. A couple told me they had previously read my medium post online and tried my github repo, which was nice to hear. Later in the day, I went around to the company booths and asked about AI residency programs. Google, Uber, and Facebook all have them, with applications opening in the Fall. All recruiters told me that they still do SWE coding interviews as part of the application, so I guess no more excuses to avoid grinding out hacker rank problems (sad). In the afternoon, I went to presentations in the main hall, where I was intrigued by meta-learning, graph neural networks, and pruning. To end the day, I had a nice dinner with some ML for healthcare enthusiasts I met on Whova. 
 
-The second day, I attended Ian Goodfellow's invited talk on adversarial machine learning, which I enjoyed, and a Google Lunch panel on music generation. I sat by the riverfront for a bit, got dinner with some other undergrads at the conference, and did some Algorithms homework to end the night.
+The second day, I attended Ian Goodfellow's invited talk on adversarial machine learning, which I enjoyed, and listened to a Google Lunch panel on music generation. I sat by the riverfront for a bit, got dinner with some other undergrads at the conference, and did some algorithms homework to end the night.
 
 On the third day, I went to the invited talk and the ICLR debate, which were both pretty average. The main events were the Salesforce and Facebook parties that night. I first went to the Salesforce party at The House of Blues, where I met a DTU student Chris and had a pretty good time. Towards the end, I left to check out the Facebook party at the Grand Oaks Mansion. It was the goddamn Great Gatsby. Open bars, free food, definitely the nicest party venue I've ever been to. These companies are bloody rich.
 
-insert pics
-<!-- <img src='/images/dtu/nyhavn.jpg' width="32%">
-<img src='/images/dtu/buddy.jpg' width="32%">
-<img src='/images/dtu/hagia.jpg' width="32%"> -->
+<img src='/images/eda.jpg' width="32%">
+<img src='/images/new_orleans.jpg' width="32%">
+<img src='/images/gatsby.jpg' width="32%">
+Left, my poster at the ICLR Learning from Limited Data Workshop; middle, me at the New Orleans riverwalk; right, the extravagant venue of the facebook party. 
 
 Montreal 
 ------
@@ -42,11 +44,13 @@ On saturday, we feasted at a k-BBQ place for lunch before going back to the airb
 
 On sunday, we woke up butt-early at 9:40AM to miraculously clean up the room before the 10:00AM check-out time. We ate a nice brunch at *Cacao 70* and drove home.
 
+<img src='/images/chicken_waffles.jpg' width="48%">
+<img src='/images/beer.jpg' width="48%">
+Chicken and Waffles (left) and beer (right) at *Les 3 Brasseurs* brewery.
+
 Fitness
 ------
-I set lofty goals for myself in terms of working out
-Set back by being sick twice and conference
-Hard to eat enough at school
+I set lofty goals for myself in terms of working out, and ultimately didn't achieve a single one. The main challenges were that I had a hard time bulking on the Dartmouth meal plan and got sick three times (maybe because of drinking alcohol and staying up late, not sure), which resulted in eating even more poorly and losing weight. On the bench press, my main metric for progress, I set a goal of 180 for 5x5, but ultimately my best was only 155 for 5x5, a 10 pound increase over my bench at the beginning of the term. I hit 185 for 1, so I guess I could still be on target for hitting 225 for 1 by the end of the year if I make good progress in the coming months. I had a good time working out with my friends John, Sam, and Prahlad, who gave me advice and pushed me to train harder.
 
 Green Key Weekend
 ------
@@ -75,11 +79,13 @@ Who are my heroes?
 ------
 
 * [Patrick Shyu](https://www.youtube.com/watch?v=XA3Qjnhvdvs) gives great life advice for young people who want to get into tech.
-
+* [Jeff Nippard](https://www.youtube.com/user/icecream4PRs) makes scientific body building videos, and [Chris Heria](https://www.youtube.com/watch?v=5O-yMbS1bRc) makes great calisthenics videos.
+* I enjoy mixes by [MrOtterMusic](https://www.youtube.com/channel/UCa9852OG1OJwMYAi7Arb2ag). 
+* I like [Big Boy](https://www.youtube.com/channel/UCIvmsk_sRPG98hwSh2lFCFg). 
 
 Closing
 ------
-
+I visited Montreal and 
 
 
 
