add new blog post

--- a/_posts/2019-06-01-blog-post-9.md
+++ b/_posts/2019-06-01-blog-post-9.md
@@ -5,6 +5,9 @@ permalink: /posts/2019/6/blog-post-9/
 tags:
   - dartmouth
   - machine learning
+  - iclr
+  - montreal
+  - fitness
 ---
 
 I had a good time this spring, although I didn't achieve many of the goals that I had set for myself. 
@@ -85,7 +88,7 @@ Who are my heroes?
 
 Closing
 ------
-I visited Montreal and 
+I visited Montreal and ICLR, which were fun experiences, but perhaps they distracted me from work too much. Overall I had a good time though.
 
 
 
