add new blog post

--- a/_posts/2019-06-01-blog-post-9.md
+++ b/_posts/2019-06-01-blog-post-9.md
@@ -47,7 +47,7 @@ On saturday, we feasted at a k-BBQ place for lunch before going back to the airb
 
 On sunday, we woke up butt-early at 9:40AM to miraculously clean up the room before the 10:00AM check-out time. We ate a nice brunch at *Cacao 70* and drove home.
 
-<img src='/images/chicken_waffles.jpg' width="48%">
+<img src='/images/chicken_waffle.jpg' width="48%">
 <img src='/images/beer.jpg' width="48%">
 Chicken and Waffles (left) and beer (right) at *Les 3 Brasseurs* brewery.
 
